JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/test3.c
ALGORITHM(test3){
	if(a == b){
		a = 1;
	} else {
		a = 1;
	}
	if(a && b){
		a = 1;
	} else {
		a = 1;
	}
	if(a || b){
		a = 1;
	} else {
		a = 1;
	}
	if(a <= b){
		a = 1;
	} else {
		a = 1;
	}
	if(a >= b){
		a = 1;
	} else {
		a = 1;
	}
	if(a < b){
		a = 1;
	} else {
		a = 1;
	}
	if(a > b){
		a = 1;
	} else {
		a = 1;
	}
}
