JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test4.c
ALGORITHM(test4){
	if(a = b){
		a = 1;
	} else {
		a = 1;
	}
}
